--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@glimmer/component": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
+    "c3": "0.7.11",
+    "css-loader": "3.4.0",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.15.1",
     "ember-cli-app-version": "^3.2.0",
@@ -44,8 +46,10 @@
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.7.1",
     "eslint-plugin-node": "^10.0.0",
+    "inspectpack": "4.2.2",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.2"
+    "qunit-dom": "^0.9.2",
+    "style-loader": "1.1.2"
   },
   "engines": {
     "node": "8.* || >= 10.*"
